# kedro-azureml-pipeline

./: .copier-answers.yml  .git-cliff.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  justfile  mkdocs.yml  noxfile.py  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/actions/e2e_test/: action.yml
.github/workflows/: nightly.yml  prepare-release.yml  publish-release.yml  spellcheck.yml  tests-versions.yml  tests.yml  tests_and_publish.yml
dev-utils/: run_e2e_tests.sh
docs/: conf.py  hooks.py  index.md  index.rst  spellcheck_exceptions.txt
docs/pages/: contributing.md  faq.md  getting-started.md  intro.md  user-guide.md
docs/pages/explanation/: architecture.md  concepts.md  data-flow.md  hook-lifecycle.md  index.md
docs/pages/how-to/: authenticate.md  build-custom-environment.md  compile-and-inspect.md  configure-multiple-workspaces.md  contribute.md  deploy-from-cicd.md  index.md  run-distributed-training.md  schedule-pipelines.md  troubleshoot.md  use-data-assets.md  use-mlflow.md
docs/pages/reference/: api.md  cli.md  configuration.md  datasets.md  index.md
docs/pages/tutorials/: getting-started.md  index.md  migrate-existing-project.md
docs/source/: 02_installation.md  03_quickstart.rst  05_data_assets.rst  05_development.md  06_scheduling.rst
docs/stylesheets/: theme.css
kedro_azureml/: cli.py  cli_functions.py  client.py  config.py  constants.py  generator.py  hooks.py  mlflow_hook.py  runner.py  scheduler.py
kedro_azureml/datasets/: __init__.py  asset_dataset.py
src/kedro_azure_ml/: runner.py
src/kedro_azure_ml/datasets/: asset_dataset.py
src/kedro_azureml_pipeline/: __init__.py  cli.py  cli_functions.py  client.py  config.py  constants.py  generator.py  hooks.py  manager.py  mlflow_hook.py  runner.py  scheduler.py  utils.py
src/kedro_azureml_pipeline/auth/: __init__.py  utils.py
src/kedro_azureml_pipeline/cli/: __init__.py  commands.py  functions.py
src/kedro_azureml_pipeline/config/: __init__.py  models.py
src/kedro_azureml_pipeline/datasets/: __init__.py  asset_dataset.py  pipeline_dataset.py
src/kedro_azureml_pipeline/distributed/: __init__.py  config.py  decorators.py  utils.py
src/kedro_azureml_pipeline/hooks/: __init__.py  local_run.py  mlflow.py
tests/: conftest.py  settings.py  test_auth.py  test_cli.py  test_cli_functions.py  test_client.py  test_config.py  test_datasets.py  test_distributed.py  test_generator.py  test_hook.py  test_kedro_context_manager.py  test_mlflow_hook.py  test_runner.py  test_schedule.py  test_utils.py
tests/conf/e2e/: azureml.yml  catalog.yml
tests/conf/local/: azureml.yml
tests/scenarios/: __init__.py  kedro_projects.py  project_factory.py
