[project]
name = "kedro-azureml"
version = "1.0.0"
description = "Kedro plugin with Azure ML Pipelines support"
readme = "README.md"
authors = [
  {name = "marcin.zablocki", email = "marcin.zablocki@getindata.com"}
]
maintainers = [
  {name = "GetInData MLOPS", email = "mlops@getindata.com"}
]
homepage = "https://github.com/getindata/kedro-azureml"
repository = "https://github.com/getindata/kedro-azureml"
documentation = "https://kedro-azureml.readthedocs.io/"
keywords = ['kedro', 'mlops', 'azureml', 'machinelearning']
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta", # license and python versions added automatically
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError"
]

[tool.isort]
known_third_party = ["azure", "tabulate", "pydantic","semver","setuptools"]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
kedro = "^1.0.0"
kedro-datasets = ">=1.0.0"
pydantic = ">=2.6.4,<2.11.0"
cloudpickle = "^3.0.0"
azure-ai-ml = ">=1.2.0"
azureml-mlflow = { version = ">=1.42.0", optional = true}
kedro-mlflow = {version = ">=2.0.0", optional = true}
mlflow = {version = ">=2.0.0", optional = true}
pyarrow = ">=18.0.0"

[tool.poetry.extras]
mlflow = ["azureml-mlflow", "mlflow", "kedro-mlflow"]

[tool.poetry.group.dev.dependencies]
pytest = "<9"
pytest-cov = ">=2.8.0,<8.0.0"
tox = ">=3.25.1"
pre-commit = "2.20.0"
numpy = [
    {version = "^1.26.0", python = ">=3.9,<3.10"},
    {version = "^2.1.0", python = ">=3.10"}
]
pandas = "^2.2.0"

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."kedro.project_commands"]
"azureml" = "kedro_azureml.cli:commands"

[tool.poetry.plugins."kedro.hooks"]
"azure_local_run_hook" = "kedro_azureml.hooks:azureml_local_run_hook"
"mlflow_azureml_hook" = "kedro_azureml.mlflow_hook:mlflow_azureml_hook"
